--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,7 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/gggiraldo/enrgz/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/gggiraldo/enrgz/actions/workflows/R-CMD-check.yaml)
+[![Codecov test coverage](https://codecov.io/gh/gggiraldo/enrgz/graph/badge.svg)](https://app.codecov.io/gh/gggiraldo/enrgz)
 <!-- badges: end -->
 
 The goal of energizer is to ...
