--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# energizer
+# energizer <a href="https://gabrielegiraldo.github.io/enrgz/"><img src="man/figures/logo.png" align="right" height="139" alt="energizer website" /></a>
 
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/gggiraldo/enrgz/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/gggiraldo/enrgz/actions/workflows/R-CMD-check.yaml)
